wrote test to create budget

--- a/todo.txt
+++ b/todo.txt
@@ -9,12 +9,12 @@ Everyday:
 and lint isn't failing.
 
 Plan:
--research how to do angular2 forms.
+-support deleting budgets
 -write e2e tests 
+-implement exporting and importing budgets 
 
 -remove heading that shows budget totals 
 -group the end to end tests in a logical manner
--implement exporting and importing budgets 
 -label your pie charts
 
 
