--- a/todo.txt
+++ b/todo.txt
@@ -9,7 +9,11 @@ Everyday:
 and lint isn't failing.
 
 Plan:
--support deleting budgets
+-automate deleting budgets
+-the monthly budget numbers are not correct.  It's still doing it 
+by year and not the time period I specified.  
+-We need to also be able to view the start and end dates of a budget 
+as quick reference. 
 -write e2e tests 
 -implement exporting and importing budgets 
 
