render money and bars

--- a/todo.txt
+++ b/todo.txt
@@ -9,6 +9,18 @@ Everyday:
 and lint isn't failing.
 
 Plan:
+-Implement bar graph 
+  -Render the same bar graph using hardcodeed
+  d3 code. 
+  -Modify the data to be dynamically generated.
+    -there has to be a bunch of calculations 
+    based on the array values. 
+  -Have the bar graph handle displaying 
+  2 or 3 bars based on the data.
+
+
+
+
 -When you add a transaction and then delete it
 the pie graph will not remove the nodes from 
 the legend 
