--- a/todo.txt
+++ b/todo.txt
@@ -10,20 +10,15 @@ and lint isn't failing.
 
 Plan:
 -Implement bar graph 
-  -Need to update graph when user adds transaction 
-  -Have it animate whenever the data changes
   -need to clean up the code.  Tons of duplication among 
   the render methods. 
-
+  -Need to label yearly/monthly on each graph
+  -center the graphs in the right hand sidebar 
 
 
 
 -When you add a transaction and then delete it
 the pie graph will not remove the nodes from 
-the legend 
--We have duplicate svg code being added 
--if you get 0s for the pie graph don't show the legend for it and don't show 
-the 0 for it. 
 -enable the ability to use the keyboard to undo a transaction.  Maybe escape 
  or have it focus on the snackbar undo.  
 -Whenever you expand category transactions it resets your focus to beginning of
