setup view transactions page

--- a/todo.txt
+++ b/todo.txt
@@ -6,10 +6,11 @@ How to deploy to surge:
 
 
 Make it look like ionic:
--Get the view category page working 
 -Get the budgeting page to render correctly 
--Setup reactive forms on subcategory page
+-Setup reactive forms on subcategory page so that you can add transactions
+  -Verify that the view category page working 
 -Install ngx charts and d3 
+-Get the graphs working
 -setup animations between the various pages to look like ionic styling. 
 
 
