rename create-budget route to add-budget to be more consistent with the naming of create vs add in the application.

--- a/todo.txt
+++ b/todo.txt
@@ -6,11 +6,9 @@ How to deploy to surge:
 
 
 Make it look like ionic:
--setup animation from going from one month to another month 
- -
+-Refactor the current animation selector so that it uses the 
+more scalable custom route info.  
 
--rename create-budget route to add-budget to be more consistent with 
-the naming of create vs add in the application. 
 
 
 -Setup reactive forms on subcategory page so that you can add transactions
