--- a/todo.txt
+++ b/todo.txt
@@ -8,13 +8,17 @@ How to deploy to surge:
 Make it look like ionic:
 
 
-
--Setup reactive forms on subcategory page so that you can add transactions
-  -Verify that the view category page working 
--Install ngx charts and d3 
+-setup a global error handler so that it replaces the current page with a 
+500 error page
+-be able to add a new transaction 
+  -Setup reactive forms on subcategory page so that you can add transactions
+    -Verify that the view category page working 
+-fix todos
 -Get the graphs working
--setup animations between the various pages to look like ionic styling. 
-
+  -Install ngx charts and d3 
+-service workers
+-fix unit tests 
+-fix e2e tests 
 
 -Make sure to use the built in angular material theme instead of 
 hardcoding colors.  Speaking of which you did hardcode the navbar 
